[package]
name = "google-search-console-api"
version = "0.1.2"
edition = "2021"

authors = ["uiuifree"]
description = "SearchConsoleApi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["SearchConsole"]

readme="README.md"
repository = "https://github.com/uiuifree/rust-google-search-console-api"

[dependencies]
reqwest ={version="0.11.10",features=["json"]}
urlencoding={version="2.1.0"}
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"


[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
csv="1.1.6"
yup-oauth2="7.0.0"
